--- a/.github/workflows/vc-sast-pipeline-sarif-import.yml
+++ b/.github/workflows/vc-sast-pipeline-sarif-import.yml
@@ -45,8 +45,8 @@ jobs:
        
     
     #  Submit  project to pipeline scan
-    - run: java -jar pipeline-scan.jar --veracode_api_id "${{secrets.VERACODE_API_ID}}" --veracode_api_key "${{secrets.VERACODE_API_KEY}}" --fail_on_severity="Very High, High" --file "target/verademo.war"
-      continue-on-error: true
+    - run: java -jar pipeline-scan.jar --veracode_api_id "${{secrets.VERACODE_API_ID}}" --veracode_api_key "${{secrets.VERACODE_API_KEY}}" --fail_on_severity="Very High, High, Medium" --file "target/verademo.war"
+      continue-on-error: false
     - uses: actions/upload-artifact@v1
       with:
         name: ScanResults
