--- a/.github/workflows/vc-sast-pipeline-sarif-import.yml
+++ b/.github/workflows/vc-sast-pipeline-sarif-import.yml
@@ -46,7 +46,7 @@ jobs:
     
     #  Submit  project to pipeline scan
     - run: java -jar pipeline-scan.jar --veracode_api_id "${{secrets.VERACODE_API_ID}}" --veracode_api_key "${{secrets.VERACODE_API_KEY}}" --fail_on_severity="Very High, High, Medium" --file "target/verademo.war"
-      continue-on-error: false
+      continue-on-error: true
     - uses: actions/upload-artifact@v1
       with:
         name: ScanResults
